# binserde

./: Cargo.toml  README.md
input/: array.bs  basic_types.bs  blockchain.bs  complex.bs  enums.bs  hello.bs  nested_struct.bs  option.bs  vec.bs  vec_struct.bs
output/rust/: Cargo.toml
output/rust/src/: main.rs
output/rust/types/: Cargo.toml
output/typescript/: package.json
output/typescript/src/: index.ts
output/typescript/src/schemas/: array.ts  basic_types.ts  blockchain.ts  complex.ts  enums.ts  hello.ts  index.ts  nested_struct.ts  option.ts  vec.ts  vec_struct.ts
src/: compiler.rs  error.rs  grammar.lalrpop  main.rs
src/codegen/: mod.rs
src/codegen/rust/: gen.rs
src/codegen/typescript/: gen.rs  mod.rs
src/new_lib/: mod.rs  rust.rs  typescript.rs
src/parser/: ast.rs
