[package]
name = "binserde"
version = "0.1.0"
edition = "2021"
authors = ["Felicity Yin <yinjingping2022@gmail.com>"]
description = "A binary encoder / decoder supports Rust and TypeScript."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["cargo"] }
lalrpop-util = { version = "0.20", features = ["lexer"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"

[build-dependencies]
lalrpop = "0.20"
regex = "1.7"
